fix: render normalised element tags to create better readability for summary
relates #184

--- a/frontend/src/style/OccupationPage.css
+++ b/frontend/src/style/OccupationPage.css
@@ -53,7 +53,12 @@
   padding-right: 1rem;
 }
 
-
+.occupation-page__summary {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+}
 
 @media (min-width: 800px) {
   .occupation-page__main {
